mule-user-guide/v/3.7/deployment-scenarios.adoc
= 部署方案
:keywords: deploy, deploying, cloudhub, on premises, on premise

[IMPORTANT]
本文档介绍如何使用Mule运行时将应用程序部署为独立应用程序。要充分利用可用的管理和监视功能，您应该 link:/runtime-manager/deploying-to-your-own-servers[部署到您的运行时间]使用Anypoint Platform。阅读这个和其他 link:/runtime-manager/deployment-strategies[部署策略]如何工作。

下表列出了您可以在本地部署Mule运行时的独立方式以及每种方法的一些特性。

[%header%autowidth.spread]
|===
|部署模式 |容器 |专业人员 |缺点 | HA  | MMC
|独立 | Mule ESB a |
* 使用Mule部署模型
* 可以运行多个应用程序
* 支持热部署
* 需要最少的资源
* 易于安装
一个|
* 必须将Mule配置到您的环境中
| {支持{1}}支持
|嵌入式`.war`文件 |应用服务器a |
* 使用webapp部署模型
* 可以运行多个应用程序
*  Webapp包含所有依赖关系
一个|
* 每个Web应用程序都运行自己的mule实例，从而增加了webapp的大小
| App Server HA  |支持*
|嵌入式Java  | Java应用程序/ IDE a |
* 不需要外部容器
一个|
* 不支持热部署
|不支持 |支持*
|===

*当Mule嵌入其他容器时， link:/mule-management-console/v/3.7[Mule管理控制台]无法执行自动发现或服务器重新启动。

[TIP]
了解利用Anypoint Platform的其他 link:/runtime-manager/deployment-strategies[部署策略]。

== 在独立模式下运行Mule

推荐的方法是从命令提示符运行Mule Standalone，作为服务或守护进程或从脚本运行。作为最简单的体系结构，它可以减少发生错误的点数。它通常最适合于性能，因为它减少了层数并消除了应用程序服务器对整体解决方案固有的性能影响。

您还可以使用Mule部署模型在Mule实例中并排运行多个应用程序。该模型支持实时部署和热重新部署应用程序。此外，Mule Standalone完全支持 link:/mule-user-guide/v/3.7/mule-high-availability-ha-clusters[骡子高可用性]模块并使用 link:/mule-management-console/v/3.7[骡子管理控制台]。

有关运行Mule独立版的更多信息，请参阅 link:/mule-user-guide/v/3.7/mule-deployment-model[Mule部署模型]。

[NOTE]
====
*Mule Standalone vs. Application Server*

下面列出的是运行Mule standalone与将其作为部署在应用程序服务器中的Web应用程序（Tomcat，WebSphere，JBoss等）运行的一些优势。

*  *Wrapper control*：Mule Standalone使用Java Service Wrapper来控制操作系统中的JVM并启动Mule。包装器可以处理系统信号并提供JVM和底层操作系统之间更好的交互。
*  *Smaller memory footprint*：Mule独立加载应用程序所需的资源;应用程序服务器添加自己的资源。
*  *Anypoint DataMapper support*：仅在Mule Enterprise Standalone运行时支持DataMapper;其他应用程序服务器不支持DataMapper。
*  *Deployment and Application Management*：通过Mule管理控制台，您可以完全控制在Mule Standalone上运行的应用程序，允许您部署/取消部署应用程序并重新启动/停止服务器。其他应用程序服务器不支持此可见性。
====

== 将Mule嵌入到Java应用程序或Web应用程序中

您可以从Java应用程序启动或停止Mule，或将其嵌入到Webapp（例如JSP或Servlet）中。有关一般说明，请参阅 link:/mule-user-guide/v/3.7/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]。下面列出了提供有关Mule应用程序部署的应用程序服务器特定信息的文档链接。

*  link:/mule-user-guide/v/3.7/deploying-mule-to-jboss[部署Mule到JBoss]
*  link:/mule-user-guide/v/3.7/deploying-mule-to-weblogic[将Mule部署到WebLogic]
*  link:/mule-user-guide/v/3.7/deploying-mule-to-websphere[将Mule部署到WebSphere]
*  link:/mule-user-guide/v/3.7/deploying-mule-as-a-service-to-tomcat[将Mule作为服务部署到Tomcat]
*  link:http://geronimo.apache.org[Geronimo的]（Geronimo应用程序服务器使用ActiveMQ作为其默认JMS提供程序，有关详细信息，请参阅 link:/mule-user-guide/v/3.7/activemq-integration[ActiveMQ集成]。）

有关如何在某些应用程序服务器中支持Mule热部署的详细信息，请参阅 link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]。

请注意，在嵌入时，Mule不支持Mule部署模型或高可用性。此外，由于应用程序服务器需要控制Mule，因此Mule管理控制台的功能降低了;特别是，您无法通过Mule管理控制台重新启动服务器。

== 使用Spring

Mule与Spring完全集成，允许您利用Spring的许多功能，包括JNDI和EJB会话bean。您还可以使用Spring远程访问从外部应用程序访问Mule。有关详情，请参阅 link:/mule-user-guide/v/3.7/using-mule-with-spring[春天使用骡子]。

== 共享资源

如果您将多个应用程序部署到同一地点，则无论采用上述哪种方式，并且这些应用程序都可以共享相同的资源，那么您可以创建一个通用的*domain*，您可以在其中定义常见配置，然后由多个项目引用。例如，这允许您通过相同的HTTP主机和端口在不同的项目中公开不同的服务，并且能够部署所有内容而没有任何冲突。 link:/mule-user-guide/v/3.7/shared-resources[详细了解共享资源]。

== 为共享资源定义类路径

您可以通过编辑每个Mule运行时的wrapper.conf文件中的classpath语句来定义共享资源所在的位置。这些语句指示文件夹搜索文件的顺序，例如jar，属性占位符文件等。wrapper.conf文件位于`mule-enterprise-MuleVersion`> *conf*文件夹中。

你可以设置这些语句：

[source,java,linenums]
----
wrapper.java.classpath.1=%MULE_LIB%
wrapper.java.classpath.2=%MULE_BASE%/conf
wrapper.java.classpath.3=%MULE_HOME%/lib/boot/*.jar
----

